--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <br />
         </div>
         <div class="buttons"></div>
+        <div id="markers"></div>
         <div class="map__container">
           <div id="map"></div>
         </div>
